fix all warnings and increase compatibility to Java 11